--- a/frontmatter/defined_acronyms.tex
+++ b/frontmatter/defined_acronyms.tex
@@ -1,76 +1,299 @@
-\DeclareAcronym{ADCS}
-{
-	short = ADCS,
-	long = attitude determination and control system,
-	alt = Attitude Determinination and Control System
+\DeclareAcronym{ADCS}{
+    short = ADCS,
+    long = {Attitude Determination and Control System},
+    alt = {Attitude Determination and Control System}
 }
 
-\DeclareAcronym{EKF}
-{
-	short = EKF,
-	long = extended Kalman filter,
-	alt = Extended Kalman Filter
+\DeclareAcronym{BRF}{
+    short = BRF,
+    long = {Body Reference Frame},
+    alt = {Body Reference Frame}
 }
 
-\DeclareAcronym{SLAM}
-{
-	short = SLAM,
-	long = simultanous localisation and mapping,
-	alt = Simultanous Localisation and Mapping
+\DeclareAcronym{CNN}{
+    short = CNN,
+    long = {Convolutional Neural Network},
+    alt = {Convolutional Neural Network}
 }
 
-\DeclareAcronym{ECI}
-{
-	short = ECI,
-	long = Earth centred inertial,
-	alt = Earth Centred Inertial
+\DeclareAcronym{COTS}{
+    short = COTS,
+    long = {Commercial-Off-The-Shelf},
+    alt = {Commercial-Off-The-Shelf}
 }
 
-\DeclareAcronym{ECEF}
-{
-	short = ECEF,
-	long = Earth centred Earth fixed,
-	alt = Earth Centred Earth Fixed
+\DeclareAcronym{CRF}{
+    short = CRF,
+    long = {Camera Reference Frame},
+    alt = {Camera Reference Frame}
 }
 
-\DeclareAcronym{BRF}
-{
-	short = BRF,
-	long = body refrence frame,
-	alt = Body Refrence Frame
+\DeclareAcronym{CSS}{
+    short = CSS,
+    long = {Coarse Sun Sensor},
+    alt = {Coarse Sun Sensor}
 }
 
-\DeclareAcronym{DCM}
-{
-	short = DCM,
-	long = direction cosine matrix,
-	alt = Direction Cosine Matrix
+\DeclareAcronym{DCM}{
+    short = DCM,
+    long = {Direction Cosine Matrix},
+    alt = {Direction Cosine Matrix}
 }
 
-\DeclareAcronym{CRF}
-{
-	short = CRF,
-	long = camera reference frame,
-	alt = Camera Reference Frame
+\DeclareAcronym{ECEF}{
+    short = ECEF,
+    long = {Earth-Centered Earth-Fixed},
+    alt = {Earth-Centered Earth-Fixed}
 }
 
-\DeclareAcronym{LLA}
-{
-	short = LLA,
-	long = lattitude longitude and altitude reference frame,
-	alt = Lattitude Longitude and Altitude Reference Frame
+\DeclareAcronym{ECI}{
+    short = ECI,
+    long = {Earth-Centered Inertial},
+    alt = {Earth-Centered Inertial}
 }
 
-\DeclareAcronym{GPS}
-{
-	short = GPS,
-	long = global positioning system,
-	alt = Global Positioning System
+\DeclareAcronym{EKF}{
+    short = EKF,
+    long = {Extended Kalman Filter},
+    alt = {Extended Kalman Filter}
 }
 
-\DeclareAcronym{LVLH}
-{
-	short = LVLH,
-	long = local vertical local Horizon,
-	alt = Local Vertical Local Horizon
+\DeclareAcronym{EO}{
+    short = EO,
+    long = {Earth Observation},
+    alt = {Earth Observation}
+}
+
+\DeclareAcronym{ENU}{
+    short = ENU,
+    long = {East-North-Up},
+    alt = {East-North-Up}
+}
+
+\DeclareAcronym{FOV}{
+    short = FOV,
+    long = {Field of View},
+    alt = {Field of View}
+}
+
+\DeclareAcronym{GNSS}{
+    short = GNSS,
+    long = {Global Navigation Satellite System},
+    alt = {Global Navigation Satellite System}
+}
+
+\DeclareAcronym{GPS}{
+    short = GPS,
+    long = {Global Positioning System},
+    alt = {Global Positioning System}
+}
+
+\DeclareAcronym{GSD}{
+    short = GSD,
+    long = {Ground Sampling Distance},
+    alt = {Ground Sampling Distance}
+}
+
+\DeclareAcronym{ICRF}{
+    short = ICRF,
+    long = {International Celestial Reference Frame},
+    alt = {International Celestial Reference Frame}
+}
+
+\DeclareAcronym{IGRF}{
+    short = IGRF,
+    long = {International Geomagnetic Reference Field},
+    alt = {International Geomagnetic Reference Field}
+}
+
+\DeclareAcronym{IMU}{
+    short = IMU,
+    long = {Inertial Measurement Unit},
+    alt = {Inertial Measurement Unit}
+}
+
+\DeclareAcronym{J2000}{
+    short = J2000,
+    long = {Epoch J2000.0},
+    alt = {Epoch J2000.0}
+}
+
+\DeclareAcronym{LEO}{
+    short = LEO,
+    long = {Low Earth Orbit},
+    alt = {Low Earth Orbit}
+}
+
+\DeclareAcronym{LiDAR}{
+    short = LiDAR,
+    long = {Light Detection and Ranging},
+    alt = {Light Detection and Ranging}
+}
+
+\DeclareAcronym{LLA}{
+    short = LLA,
+    long = {Latitude, Longitude, and Altitude Reference Frame},
+    alt = {Latitude, Longitude, and Altitude Reference Frame}
+}
+
+\DeclareAcronym{LKT}{
+    short = LKT,
+    long = {Lucas-Kanade Tracker},
+    alt = {Lucas-Kanade Tracker}
+}
+
+\DeclareAcronym{LVLH}{
+    short = LVLH,
+    long = {Local Vertical Local Horizon},
+    alt = {Local Vertical Local Horizon}
+}
+
+\DeclareAcronym{MSI}{
+    short = MSI,
+    long = {Multispectral Imagers},
+    alt = {Multispectral Imagers}
+}
+
+\DeclareAcronym{NED}{
+    short = NED,
+    long = {North-East-Down},
+    alt = {North-East-Down}
+}
+
+\DeclareAcronym{NIR}{
+    short = NIR,
+    long = {Near-Infrared},
+    alt = {Near-Infrared}
+}
+
+\DeclareAcronym{NORAD}{
+    short = NORAD,
+    long = {North American Aerospace Defense Command},
+    alt = {North American Aerospace Defense Command}
+}
+
+\DeclareAcronym{OCS}{
+    short = OCS,
+    long = {Orbit Control System},
+    alt = {Orbit Control System}
+}
+
+\DeclareAcronym{ONA}{
+    short = ONA,
+    long = {Off-Nadir Angle},
+    alt = {Off-Nadir Angle}
+}
+
+\DeclareAcronym{ORB}{
+    short = ORB,
+    long = {Oriented FAST and Rotated BRIEF},
+    alt = {Oriented FAST and Rotated BRIEF}
+}
+
+\DeclareAcronym{PnP}{
+    short = PnP,
+    long = {Perspective-n-Point Problem},
+    alt = {Perspective-n-Point Problem}
+}
+
+\DeclareAcronym{PnL}{
+    short = PnL,
+    long = {Perspective-n-Lines Problem},
+    alt = {Perspective-n-Lines Problem}
+}
+
+\DeclareAcronym{PF}{
+    short = PF,
+    long = {Particle Filter},
+    alt = {Particle Filter}
+}
+
+\DeclareAcronym{QGIS}{
+    short = QGIS,
+    long = {Quantum Geographic Information System (GIS Software)},
+    alt = {Quantum Geographic Information System (GIS Software)}
+}
+
+\DeclareAcronym{RANSAC}{
+    short = RANSAC,
+    long = {Random Sample Consensus},
+    alt = {Random Sample Consensus}
+}
+
+\DeclareAcronym{RUKF}{
+    short = RUKF,
+    long = {Robust Unscented Kalman Filter},
+    alt = {Robust Unscented Kalman Filter}
+}
+
+\DeclareAcronym{SIFT}{
+    short = SIFT,
+    long = {Scale-Invariant Feature Transform},
+    alt = {Scale-Invariant Feature Transform}
+}
+
+\DeclareAcronym{SLAM}{
+    short = SLAM,
+    long = {Simultaneous Localisation and Mapping},
+    alt = {Simultaneous Localisation and Mapping}
+}
+
+\DeclareAcronym{ST}{
+    short = ST,
+    long = {Star Tracker},
+    alt = {Star Tracker}
+}
+
+\DeclareAcronym{SURF}{
+    short = SURF,
+    long = {Speeded-Up Robust Features},
+    alt = {Speeded-Up Robust Features}
+}
+
+\DeclareAcronym{SWAPC}{
+    short = SWaP-C,
+    long = {Size, Weight, Power, and Cost},
+    alt = {Size, Weight, Power, and Cost}
+}
+
+\DeclareAcronym{SWIR}{
+    short = SWIR,
+    long = {Shortwave Infrared},
+    alt = {Shortwave Infrared}
+}
+
+\DeclareAcronym{TLE}{
+    short = TLE,
+    long = {Two-Line Elements},
+    alt = {Two-Line Elements}
+}
+
+\DeclareAcronym{UAV}{
+    short = UAV,
+    long = {Unmanned Aerial Vehicle},
+    alt = {Unmanned Aerial Vehicle}
+}
+
+\DeclareAcronym{UKF}{
+    short = UKF,
+    long = {Unscented Kalman Filter},
+    alt = {Unscented Kalman Filter}
+}
+
+\DeclareAcronym{USGS}{
+    short = USGS,
+    long = {U.S. Geological Survey},
+    alt = {U.S. Geological Survey}
+}
+
+\DeclareAcronym{VO}{
+    short = VO,
+    long = {Visual Odometry},
+    alt = {Visual Odometry}
+}
+
+\DeclareAcronym{WGS84}{
+    short = WGS84,
+    long = {World Geodetic System 1984},
+    alt = {World Geodetic System 1984}
 }
