--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,7 @@
 
 \input{frontmatter/defined_acronyms}
 \input{frontmatter/definitions}
+\input{frontmatter/variables_and_functions} 
 \makenoidxglossaries
 
 \begin{document}
@@ -57,7 +58,6 @@
 \input{frontmatter/nomenclature}
 \pagenumbering{arabic}
 \acresetall
-\printnomenclature
 
 % Contents
 \input{chapters/introduction}
@@ -66,7 +66,6 @@
 \input{chapters/modelling}
 \input{chapters/imageprocessing}
 \input{chapters/stateestimation}
-\input{chapters/systemintegration.tex}
 \input{chapters/experiments}
 \input{chapters/conclusion}
 
